sumo/tests/sumo/errors/network/node_count/root__node_count__empty/errors.sumo
Error: Missing number of nodes.
Quitting (on error).
